# latex-plus-plus

./: CMakeLists.txt  LICENSE  README.md
cmake/: latex3dConfig.cmake.in
include/latex3d/: generator.h  latex3d.h  layouter.h  log.h  math_table.h  mesh.h  text3d.h
samples/: CMakeLists.txt  render_samples.cpp
src/: generator.cpp  layouter.cpp  log.cpp  math_table.cpp  text3d.cpp
tests/: CMakeLists.txt  test_layouter.cpp
